Closed Bug 1662938 Opened 4 years ago Closed 4 years ago

UI left open but disabled after printing with Microsoft Print to PDF (PrintUtils.printWindow promise does not resolve)

Categories

(Core :: Printing: Setup, defect, P1)

defect

Tracking

()

VERIFIED FIXED
82 Branch
Tracking Status
firefox82 --- verified
firefox83 --- verified

People

(Reporter: emmamalysz, Assigned: bobowen)

Details

(Whiteboard: [print2020_v82][old-ui-])

Attachments

(1 file)

After Bug 1659624, we're closing the print preview window once the user hits "print" or "save" (submits the form). When the selected printer is Microsoft Print to PDF, PrintUtils.printWindow does not resolve, leaving the dialog open with all the buttons in the form disabled.

We should figure out how to fix this edge case.

Whiteboard: [print2020_v81] → [print2020_v81][old-ui-]

Seems like a platform bug to me.

Component: Printing → Printing: Setup
Product: Toolkit → Core
Summary: PrintUtils.printWindow promise does not resolve when Microsoft Print to PDF is selected → UI left open but disabled after printing with Microsoft Print to PDF (PrintUtils.printWindow promise does not resolve)

Bob, maybe you could take a look?

Flags: needinfo?(bobowencode)

(In reply to Jonathan Watt [:jwatt] from comment #2)

Bob, maybe you could take a look?

I can't reproduce at the moment, for "Microsoft Print to PDF" or "Save to PDF".
emalysz - does this happen for you on all sites?

Flags: needinfo?(bobowencode) → needinfo?(emalysz)

Ah, if I hit cancel on the file picker I get this.
I'll take a look.

Flags: needinfo?(emalysz)
Assignee: nobody → bobowencode
Status: NEW → ASSIGNED
Whiteboard: [print2020_v81][old-ui-] → [print2020_v82][old-ui-]
Priority: P2 → P1
Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/373d38f3ee07 Notify RemotePrintJobParent's listeners of the error when we fail to initialize the print. r=jwatt
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Just confirmed this issue verified on 83.0a1(20200922154306) and 82.0b2(20200922183749) using Windows 10x64.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: