Bug 1662938: Notify RemotePrintJobParent's listeners of the error when we fail to initialize the print. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D89490